# jenkins_learn

./: Dockerfile  Jenkinsfile  README.md  README_LEARN.md  docker-compose.yml  plugins.txt
python_pipeline_jenkins_learn/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  pytest.ini
python_pipeline_jenkins_learn/python_pipeline_jenkins_learn/: main.py  math_operations.py
python_pipeline_jenkins_learn/tests/: test_api_integration.py  test_math_operations.py
