[tool.poetry]
name = "python-pipeline-jenkins-learn"
version = "0.1.0"
description = ""
authors = ["Paulo Mulotto <paulo.mulotto@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.4.4"
fastapi = {extras = ["all"], version = "^0.109.0"}
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
